--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <h1>Formulário De Cadastro</h1>
     <forms>
-        <imput type="text" placeholder="Nome Completo:" />
+        <imput id= "Nome Completo:" type="text" placeholder="Nome Completo:" />
         <br />
-       <label for="E-mail">E-mail: </label>
+       <label for="E-mail"> E-mail: </label>
         <imput id= "E-mail" type="e-mail" />
-        <imput type="text" placeholder="Senha:" />
+        <br>
+        <imput id="Senha:" type="password" placeholder="Senha:" />
         <br />
         <button type="submit">
             Enviar
@@ -21,10 +22,3 @@
     </forms>
 </body>
 </html>
-echo "# Exerc-cio" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/biapsilva/Exerc-cio.git
-git push -u origin mail
